# genetic-algo-cpp

./: CMakeLists.txt  README.md
include/genetic_algorithm/: ga.hpp
include/neural_network/: layer.hpp  layer_topology.hpp  neuron.hpp  nn.hpp
include/utils/: algo.hpp  debugging.hpp
libs/evolvo/: CMakeLists.txt
libs/evolvo/include/evolvo/: chromosome.hpp  crossover.hpp  ga.hpp  individual.hpp  population.hpp  selection.hpp
libs/evolvo/include/evolvo/utils/: debugging.hpp  exceptions.hpp  prng.hpp
libs/evolvo/src/: chromosome.cpp  crossover.cpp  ga.cpp  individual.cpp  population.cpp  selection.cpp
libs/evolvo/test/: CMakeLists.txt  tests.cpp
libs/neuro/: CMakeLists.txt  README.md
libs/neuro/.github/workflows/: build_and_test.yml
libs/neuro/include/neuro/: layer.hpp  neuron.hpp  nn.hpp
libs/neuro/include/neuro/utils/: debugging.hpp  exceptions.hpp
libs/neuro/src/: layer.cpp  neuron.cpp  nn.cpp
libs/neuro/test/: CMakeLists.txt  tests.cpp
src/: main.cpp
src/neural_network/: layer.cpp  neuron.cpp  nn.cpp
